# cuda-triton-learning

./: .gitignore  .gitmodules  README.md  flash_attention_benchmark_20250801_104539.json  requirements.txt  setup.md
FlashMLA_notes/: 01_项目概述与背景.md  02_传统MLA实现方法与局限性.md  03_CUDA核心实现与优化技术.md  04_性能测试与实际应用案例.md  05_技术价值与学习意义.md  README.md
cuda_basics/: 01_hello_cuda.cu  02_vector_add.cu  03_matrix_multiply.cu  04_parallel_reduction.cu  04_parallel_reduction.md  05_stream_overlap.cu  05_stream_overlap.md  multiply  parallel  stream
cutlass_basics/: 01_gemm_basic.cu  02_cute_tensor.cu  Makefile
docs/: learning_plan.md
docs/cuda_basics/: 01_hello_cuda.md  02_vector_add.md  03_matrix_multiply.md  04_parallel_reduction.md  05_stream_overlap.md
docs/cutlass_study/: 01_cutlass_introduction.md  02_cutlass_programming_basics.md  README.md
docs/flash_attention_study/: 01_flash_attention_theory.md  02_flash_attention_v1_learning.md  02_flash_attention_v1_vs_v2.md  03_tiny_implementation_analysis.md  04_optimization_guide.md  README.md
docs/flashmla_study/: 01_flashmla_overview.md  02_multi_head_latent_attention_detailed.md  README.md
flash_attention/: CMakeLists.txt  CUDA_v1_Debug_Report.md  CUDA_v1_Developer_Guide.md  CUDA_v1_Implementation_Summary.md  Flash_Attention_Implementation_Guide.md  PROJECT_SUMMARY.md  benchmark_flash_attention.py  benchmark_flash_attention_v2.py  build_cuda.sh  test_comprehensive.py
flash_attention/cuda_common/: flash_attention_common.h
flash_attention/cuda_v1/: CMakeLists.txt  flash_attention_v1.cu  flash_attention_v1_kernel.cu  test_flash_attention_v1.cu
flash_attention/cuda_v2/: CMakeLists.txt  flash_attention_v2.cu  flash_attention_v2.h  flash_attention_v2_kernel.cu  test_basic_cuda.cpp  test_flash_attention_v2.cu  test_flash_v2_comprehensive.cpp  test_flash_v2_minimal.cpp
flash_attention/docs/: flash_attention_v2_implementation.md  flash_attention_v2_performance_benchmarking.md
flash_attention/flash_v1/triton/: flash_attention_v1.py  flash_attention_v1_fixed.py  test_flash_v1.py
flash_attention/flash_v2/triton/: flash_attention_v2.py  flash_attention_v2_simple.py  test_flash_v2.py
flash_attention/naive/: naive_attention.py
flash_attention/test_results/: flash_attention_test_results.json  flash_attention_v2_benchmark_20250801_115603.json
triton_basics/: 01_vector_add.py  02_matrix_multiply.py  README.md
triton_basics/01_basics/matrix_operations/: README.md  matmul.py  matrix_multiply.py
triton_basics/01_basics/memory_patterns/: memory_access.py
triton_basics/03_attention/: standard_attention.py
triton_basics/docs/: activation_functions_implementation.md  adam_optimizers_implementation.md  debugging_guide.md  distributed_ops.md  layernorm_implementation.md  matmul_implementation.md  memory_patterns_implementation.md  muon_optimizer_implementation.md  quantization.md  rmsnorm_implementation.md  softmax_implementation.md  sparse-matrix-impl.md  vector_add_implementation.md
triton_basics/interview/: basic-interview-questions.md  interview_preparation_plan.md  project-specific-questions.md  triton-basics-concepts.md
triton_basics/tests/: test_activations.py  test_adam_optimizers.py  test_distributed.py  test_layernorm.py  test_matmul.py  test_memory_patterns.py  test_muon_optimizer.py  test_quantization.py  test_rmsnorm.py  test_softmax.py  test_sparse_matrix.py  test_vector_add.py
(+15 files in other folders)
